[package]
name = "legacy-rsfs"
version = "0.1.0"
authors = ["Ronnie Tran <ronnie.tran2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.3.3"
flate2 = { version = "1.0.14", features = ["zlib"], default-features = false }
byteorder = "1.3.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false